--- a/blog-app/src/main/resources/application.properties
+++ b/blog-app/src/main/resources/application.properties
@@ -10,6 +10,11 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
+#File related config
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+project.image=C:/temp/uploads
 
 
 #spring.jackson.serialization.fail-on-empty-beans=false
